# path-of-misfortune

./: .gitignore  LICENSE  README.md  pyproject.toml  taskfile.yaml
.github/workflows/: code_quality_checks.yml
.streamlit/: config.toml  pages.toml
.taskfiles/code-quality/: taskfile.yaml
.taskfiles/scrape/: taskfile.yaml
.taskfiles/streamlit/: taskfile.yaml
app/data/: classes.json
app/models/: __init__.py  ascendancy.py  gems.py
app/pages/: configuration.py  wheel.py
app/ui/: __init__.py  ascendancy_card.py  skill_card.py
path_of_misfortune/: app.py  ui.py
path_of_misfortune/data/: classes.json  scrape_classes.py  scrape_skill_gems.py  skill_gems.json  utils.py
path_of_misfortune/models/: SkillGem.py  ascendancy.py  gems.py
scripts/: scrape_classes.py  scrape_skill_gems.py
