[tool.poetry]
name = "path-of-misfortune"
version = "0.1.0"
description = ""
authors = ["jordanhoare <jordanhoare0@gmail.com>"]
readme = "README.md"
packages = [{include = "path_of_misfortune"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
